2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (toggle-map): Bind "e" to `eglot'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-run): Run `shell-file-name' if the
	command is not specified.
	(tui-locate): Display the preview window vertically.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Add
	`exit-recursive-edit' to `kill-buffer-hook'.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Customize header-line
	and mode-line.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `reposition-window' instead of `+recenter-top-30%'.

2025-08-10  Zhengyi Fu  <i@fuzy.me>

	* init.el: Update key bindings of eat.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (org-latex-classes): Add ctexart.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+xref-window-quit): Use `quit-windows-on'.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Check packages before
	exiting.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	Fix tui.el compatibility with htop

	* site-lisp/tui/tui.el (tui-external-terminal-exec)
	(tui-foot-exec):
	* site-lisp/tui/tui-vterm.el (tui-vterm-exec):
	* site-lisp/tui/tui-term.el (tui-term-exec):
	* site-lisp/tui/tui-eat.el (tui-eat-exec): Allow the `callback'
	argument to be nil.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-terminal-function): Add
	`tui-foot-exec' to choice candidates.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-foot-window-size): Change default
	value of tui-foot-window-size.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not clear file-name-handler-alist during startup.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	Improve foot support of tui.el

	* site-lisp/tui/tui.el (tui-foot-file, tui-foot-appid)
	(tui-foot-window-size): New user options.
	(tui-foot-exec): New function.

2025-08-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): New command.
